--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -39,3 +39,13 @@ font-size: 40px;
 }
 
 
+@media only screen and (max-width: 600px) {
+    .header h1{
+        font-size: 30px;
+        margin-left: 5px;
+     } 
+     
+     #search{
+        margin-bottom: 10px;
+     }
+}
