--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,10 @@ body{
     }
 
 
-
     .templates {
         display: flex;
         flex-wrap: wrap;
+        padding-top: 10px;
     }
 
     .templates div {
@@ -70,4 +70,11 @@ body{
     h3{
         margin:20px;
     }
+    body {
+        height: 100vh; 
+      }
+    #container{
+        margin-top: 10px;
+    }
+    
 }
