--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -42,7 +42,7 @@ font-size: 40px;
 @media only screen and (max-width: 600px) {
     .header h1{
         font-size: 30px;
-        margin-left: 5px;
+        margin:5px;
      } 
      
      #search{
